--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/onezens/fileUploadServer#readme",
   "dependencies": {
     "express": "^4.16.2",
-    "express-fileupload": "^0.3.0"
+    "express-fileupload": "^0.3.0",
+    "formidable": "^1.1.1"
   }
 }
